--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,12 @@
         <dependency>
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j</artifactId>
-            <version>1.9</version>
+            <version>2.0.0-M04</version>
         </dependency>
         <dependency>
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j-kernel</artifactId>
-            <version>1.9</version>
+            <version>2.0.0-M04</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
